[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["dnabre <dnabre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
advent-of-code-data = "^0.8.5"
pygame = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
